--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@reduxjs/toolkit": "^1.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.2",
-    "react-router-dom": "^6.4.0",
+    "react-icons": "^4.4.0",
+    "react-redux": "^8.0.4",
+    "react-router-dom": "^6.4.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
