--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "bookstore",
+  "name": "metrics-webapp",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "start": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
+    "jest": "^29.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.1",
+    "react-test-renderer": "^18.2.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
